[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hackerrank-claim-verifier"
version = "0.1.0"
description = "Multi-modal evidence review pipeline for HackerRank Orchestrate."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.7.0",
  "pillow>=10.0.0",
  "opencv-python-headless>=4.9.0",
  "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["code"]
include = ["claim_verifier*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
